tf-wordpress/igw.tf
resource "aws_internet_gateway" "internet-gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name    = "internet-gw"
    Purpose = "wordpress-POC"
  }
}
