tf-wordpress/routes.tf
# resource "aws_route_table" "public-rt" {
#   vpc_id = aws_vpc.main.id
#   route {
#     cidr_block = "0.0.0.0/0"
#     gateway_id = aws_internet_gateway.internet-gw.id
#   }
#   tags = {
#     Purpose = "wordpress-POC"
#   }
# }

# resource "aws_route_table_association" "public-rta-1a" {
#   subnet_id      = aws_subnet.public-subnet-1a.id
#   route_table_id = aws_route_table.public-rt.id
# }

# resource "aws_route_table_association" "public-rta-1b" {
#   subnet_id      = aws_subnet.public-subnet-1b.id
#   route_table_id = aws_route_table.public-rt.id
# }
